added seed database script

--- a/env.sample
+++ b/env.sample
@@ -3,3 +3,11 @@ OPENAI_API_KEY
 OPENAI_API_VERSION
 OPENAI_API_MODEL_VERSION
 OPENAI_API_MODEL_DEPLOYMENT_NAME
+
+# Database Configuration
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=knowledge_base
+DB_USER=postgres
+DB_PASSWORD=your_password_here
+# DB_SSLMODE=prefer
