--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,7 @@
     "version": "0.2.0",
     "configurations": [
 
+
         {
             "name": "Python Debugger: Current File",
             "type": "debugpy",
@@ -13,10 +14,17 @@
             "console": "integratedTerminal"
         },
         {
-            "name": "Python Debugger: simple ai",
+            "name": "Debug: Single Agent",
             "type": "debugpy",
             "request": "launch",
-            "program": "basic_chatbot_with_tools_and_memory_simple.py",
+            "program": "chat_single_agent.py",
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Debug: Multi Agent",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "chat_multi_agent.py",
             "console": "integratedTerminal"
         }
     ]
