--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,28 +4,41 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
-
         {
             "name": "Python Debugger: Current File",
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "openOnSessionStart",
+            "preLaunchTask": "Clear Terminal"
         },
         {
             "name": "Debug: Single Agent",
             "type": "debugpy",
             "request": "launch",
             "program": "chat_single_agent.py",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "openOnSessionStart",
+            "preLaunchTask": "Clear Terminal"
         },
         {
             "name": "Debug: Multi Agent",
             "type": "debugpy",
             "request": "launch",
             "program": "chat_multi_agent.py",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "openOnSessionStart",
+            "preLaunchTask": "Clear Terminal"
+        },
+        {
+            "name": "Debug: Multi Agent Orchestrator",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "multi_agent_orchestrator.py",
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "openOnSessionStart",
+            "preLaunchTask": "Clear Terminal"
         }
     ]
 }
