--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ uvicorn
 
 openai==1.78.1
 httpx==0.27.2
+requests
 
 sqlalchemy >= 2.0.0
 asyncpg
@@ -26,5 +27,6 @@ psycopg2
 mkdocs
 python-slugify
 PyGithub
+python-gitlab
 
 
