check in agent swarm

--- a/env.sample
+++ b/env.sample
@@ -11,3 +11,9 @@ DB_NAME=knowledge_base
 DB_USER=postgres
 DB_PASSWORD=your_password_here
 # DB_SSLMODE=prefer
+
+# GitLab Configuration (required for autonomous swarming)
+GITLAB_URL=http://localhost:8929
+GITLAB_ADMIN_PAT=your_gitlab_admin_token_here
+# Alternative token name (if GITLAB_ADMIN_PAT not available)
+# GITLAB_PAT=your_gitlab_token_here
