--- a/env.sample
+++ b/env.sample
@@ -7,7 +7,7 @@ OPENAI_API_MODEL_DEPLOYMENT_NAME
 # Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=knowledge_base
+DB_NAME=kb_postgres
 DB_USER=postgres
 DB_PASSWORD=your_password_here
 # DB_SSLMODE=prefer
