--- a/env.sample
+++ b/env.sample
@@ -17,3 +17,7 @@ GITLAB_URL=http://localhost:8929
 GITLAB_ADMIN_PAT=your_gitlab_admin_token_here
 # Alternative token name (if GITLAB_ADMIN_PAT not available)
 # GITLAB_PAT=your_gitlab_token_here
+
+# Default Knowledge Base and Project Configuration
+DEFAULT_KNOWLEDGE_BASE_ID=13
+DEFAULT_GITLAB_PROJECT_ID=27
